--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,8 +61,8 @@ $size: 30px;
   }
 }
 
-.category { text-align:center; }
-}
-@media only screen and (min-width: 1000px) {
+.category { display: block !important;text-align:center; }
+
+@media screen and (min-width: 1000px) {
 .category { display: none !important; }
 }
