--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,5 +70,5 @@ $size: 30px;
 .img-responsive2{display:block;max-width:100%;height:auto}
 
 @media only screen and (max-width: 1000px) {
-.img-responsive2 { width:45%;height:auto; }
+.img-responsive2 { display:block;width:40%;height:auto; }
 }
